--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PosLaptopShopAngular</title>
-  <base href="/">
+  <title>Laptop Shop POS (Angular)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -11,3 +10,4 @@
   <app-root></app-root>
 </body>
 </html>
+ 
